ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: trevor-ingress
  namespace: trevor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  tls:
  - hosts:
    - trevorred.cit270.com
    secretName: trevor-tls
  rules:
  - host: trevorred.cit270.com
    http:
      paths:
      - backend:
          serviceName: rianravengaurd-cit270-loadbalancer
          servicePort: 80
